--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -38,11 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88.45 %\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "# Discrete Binomial:\n",
+    "# The Binomial distribution is a discrete probability distribution that models the number of \n",
+    "# successes in a fixed number of independent Bernoulli trials. In other words, you have a trial and \n",
+    "# you repeat it a certain number of times. The binomial counts the numbers of success.\n",
+    "\n",
+    "from scipy.stats import binom\n",
+    "\n",
+    "p_show = 1 - 0.03\n",
+    "n_seats = 450\n",
+    "n_tickets = 460\n",
+    "\n",
+    "p_enough_seats = binom.cdf(n_seats, n_tickets, p_show)\n",
+    "print(f\"{round(p_enough_seats*100,2)} %\")"
    ]
   },
   {
@@ -66,17 +86,35 @@
     "Suppose a customer service representative at a call center is handling customer complaints. Consider the following:\n",
     "- The probability of successfully resolving a customer complaint on the first attempt is 0.3. \n",
     "\n",
-    "\n",
     "What is the probability that the representative needs to make at least three attempts before successfully resolving a customer complaint?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.028227"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#code here"
+    "# Discrete Geometric:\n",
+    "# The Geometric distribution is a discrete probability distribution that models the number of \n",
+    "# trials needed to achieve the first success in a sequence of independent trials. \n",
+    "\n",
+    "from scipy.stats import geom\n",
+    "\n",
+    "p_resolve = 0.03\n",
+    "geom_dist = geom(p_resolve)\n",
+    "geom_dist.pmf(3)"
    ]
   },
   {
@@ -107,11 +145,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.29 %\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "# Discrete Poisson\n",
+    "# The Poisson distribution is a discrete probability distribution that expresses \n",
+    "# the probability of a given number of events occurring in a fixed interval of time or space.\n",
+    "\n",
+    "from scipy.stats import poisson\n",
+    "\n",
+    "# Part 1\n",
+    "avg_visits = 500\n",
+    "today_visits = 550\n",
+    "visits_distr = poisson(avg_visits)\n",
+    "p_overload = 1 - visits_distr.cdf(today_visits)\n",
+    "\n",
+    "print(f\"{round(p_overload*100,2)} %\")"
    ]
   },
   {
@@ -123,11 +181,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 %\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "# Part 2\n",
+    "avg_visits_daily = 500 * 24\n",
+    "today_visits_daily = 550 * 24\n",
+    "\n",
+    "visits_distr_daily = poisson(avg_visits_daily)\n",
+    "p_overload_daily = 1 - visits_distr_daily.cdf(today_visits_daily)\n",
+    "p_overload_daily\n",
+    "print(f\"{round(p_overload_daily*100,4)} %\")"
    ]
   },
   {
@@ -157,10 +230,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39.35 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Continuous Exponencial\n",
+    "# The Exponential Distribution is a way to model the time between events that happen one after \n",
+    "# another, independently, and at a constant average rate.\n",
+    "\n",
+    "from scipy.stats import expon\n",
+    "\n",
+    "# Part 1\n",
+    "lambda_value = 0.1 # rate of events per unit of time\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "p_next_customer = lambda_inv.cdf(5)\n",
+    "print(f\"{round(p_next_customer*100, 2)} %\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,10 +266,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22.31 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Part 2\n",
+    "lambda_value = 0.1 # rate of events per unit of time\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "p_empl_break = 1-lambda_inv.cdf(15)\n",
+    "\n",
+    "print(f\"{round(p_empl_break*100, 2)} %\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,11 +304,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68.27 %\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "# Continuous Gaussian (Normal)\n",
+    "# The Normal Distribution is commonly used to model continuous random variables \n",
+    "# because it accurately represents the natural symmetry and tendency to cluster around an average. \n",
+    "\n",
+    "from scipy.stats import norm \n",
+    "\n",
+    "mean = 150\n",
+    "std = 10\n",
+    "\n",
+    "norm_dist = norm(loc = mean, scale = std)\n",
+    "p_weight = norm_dist.cdf(160) - norm_dist.cdf(140)\n",
+    "print(f\"{round(p_weight*100,2)} %\")"
    ]
   },
   {
@@ -219,17 +346,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54.88 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Continuous Exponencial\n",
+    "# The Exponential Distribution is a way to model the time between events that happen \n",
+    "# one after another, independently, and at a constant average rate. \n",
+    "\n",
+    "# The Exponential Distribution is characterized by a single parameter, often denoted as λ (lambda). This \n",
+    "# parameter represents the rate of events occurring per unit time.\n",
+    "\n",
+    "from scipy.stats import expon\n",
+    "lambda_value = (1/50) # rate of events per unit of time\n",
+    "lambda_inv = expon(scale = 1/lambda_value)\n",
+    "p_break = 1-lambda_inv.cdf(30)\n",
+    "\n",
+    "print(f\"{round(p_break*100, 2)} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -243,9 +397,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
