Corrections to lab

--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -91,18 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.028227"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.82 %\n"
+     ]
     }
    ],
    "source": [
@@ -114,7 +111,8 @@
     "\n",
     "p_resolve = 0.03\n",
     "geom_dist = geom(p_resolve)\n",
-    "geom_dist.pmf(3)"
+    "cust_compl = geom_dist.pmf(3)\n",
+    "print(f\"{round(cust_compl*100,2)} %\")"
    ]
   },
   {
