Corrections to lab

--- a/lab-intro-probability.ipynb
+++ b/lab-intro-probability.ipynb
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.82 %\n"
+      "85.3 %\n"
      ]
     }
    ],
@@ -109,9 +109,9 @@
     "\n",
     "from scipy.stats import geom\n",
     "\n",
-    "p_resolve = 0.03\n",
+    "p_resolve = 0.3\n",
     "geom_dist = geom(p_resolve)\n",
-    "cust_compl = geom_dist.pmf(3)\n",
+    "cust_compl = 1-geom_dist.pmf(3)\n",
     "print(f\"{round(cust_compl*100,2)} %\")"
    ]
   },
